--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="/">Home</a>
+          <a class="page-link" href="/categories/">Categories</a>
+          <a class="page-link" href="/tags/">Tags</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
