--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 <header class="site-header">
-
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
     <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
-
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -16,7 +14,6 @@
             </svg>
           </span>
         </label>
-
         <div class="trigger">
           <a class="page-link" href="/">Home</a>
           <a class="page-link" href="/categories/">Categories</a>
@@ -32,3 +29,4 @@
     {%- endif -%}
   </div>
 </header>
+<!-- 블로그 제목은 _config.yml의 title을 따르므로 별도 수정 필요 없음 -->
